[package]
name = "os"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.1"
buddy_system_allocator = "0.11.0"
dtb-walker = "0.1.3"
elf = { version = "0.8.0", default-features = false, features = ["alloc", "to_str"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
log = "0.4.26"
riscv = {  version = "0.14.0" }
spin = "0.10.0"
# sbi-rt = { version = "0.0.2", features = ["legacy"] }
static_assertions = "1.1.0"
thiserror = { version = "2.0.12", default-features = false }
xmas-elf = "0.10.0"

[profile.release]
debug = true

[[bin]]
name = "os"
path = "src/main.rs"
test = false
doctest = false
bench = false
